[#1] Create mock endpoint for "/attribution" (#9)
* Update example attribution endpoint

Update the example attribution endpoint to return a mocked attribution
object.

* Update api docs
