# routes/attribution.js
@@ -5,20 +5,34 @@ const prefix = require('./__utils__/path')('/attribution');
 
 const routes = [];
 
+const attributionMock = {
+  license: 'CC BY-SA 3.0',
+  attribution_plain:
+    'Pierre Dalous (https://commons.wikimedia.org/wiki/File:Pair_of_Merops_apiaster_feeding.jpg), "Pair of Merops apiaster feeding", https://creativecommons.org/licenses/by-sa/3.0/legalcode',
+  attribution_text:
+    'Pierre Dalous (https://commons.wikimedia.org/wiki/File:Pair_of_Merops_apiaster_feeding.jpg), "Pair of Merops apiaster feeding", https://creativecommons.org/licenses/by-sa/3.0/legalcode',
+  attribution_html:
+    'Pierre Dalous (https://commons.wikimedia.org/wiki/File:Pair_of_Merops_apiaster_feeding.jpg), "Pair of Merops apiaster feeding", https://creativecommons.org/licenses/by-sa/3.0/legalcode',
+  license_url: 'https://creativecommons.org/licenses/by-sa/3.0/legalcode',
+};
 routes.push({
-  path: prefix('/{file}/and-so-on'),
+  path: prefix('/{language}/{file}'),
   method: 'GET',
   options: {
     description: 'Generate attribution',
     notes: 'Generate attribution hints for the given file.',
-    validate: {},
+    validate: {
+      params: {
+        language: Joi.string(),
+        file: Joi.string(),
+      },
+    },
     response: {
       schema: Joi.object()
         .required()
         .meta({ className: 'AttributionShowResponse' }),
       status: {
         400: definitions.errors['400'],
-        401: definitions.errors['401'],
       },
     },
     plugins: {
@@ -28,13 +42,7 @@ routes.push({
       },
     },
   },
-  handler: async (request, h) => {
-    // const { generator } = request.server.app.services;
-
-    const attribution = {};
-
-    return h.response(attribution);
-  },
+  handler: async (request, h) => h.response(attributionMock),
 });
 
 module.exports = routes;
